[tool.poetry]
name = "project"
version = "0.1.0"
description = "A CLI to fetch PubMed papers"
authors = ["y"]
readme = "README.md"
packages = [
    { include = "project" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.32.4,<3.0.0"

[tool.poetry.scripts]
get-papers-list = "project.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
